added "containeer box" where you'll enable write notes.

--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
             <p>here will be to do task web app!</p>
         </div>
 
+        <div class="clear"></div>
+        <h2></h2>
+
+        <div class="container">
+            <p>Here will be container for adding new notes!</p>
+
+        </div>
+
 
     </body>
 </html>
