input and button added

--- a/main.html
+++ b/main.html
@@ -10,6 +10,16 @@
             <p>here will be to do task web app!</p>
         </div>
 
+        <div class="clear"></div>
+        <h2></h2>
+
+        <div class="container">
+            <p>Here will be container for adding new notes!</p>
+            <input type="text" id="input" placeholder="Write your task..."></input>
+            <button> ADD </button>
+
+        </div>
+
 
     </body>
 </html>
