--- a/main.html
+++ b/main.html
@@ -18,6 +18,18 @@
 
         </div>
 
+        <div class="clear"></div>
+        <h2></h2>
+
+        <div class="TaskList">
+            <h2>Your tasks!</h2>
+            <p>1st task</p>
+            <p>2nt task</p>
+            <p>3rd task</p>
+            <p>4th task</p>
+
+        </div>
+
 
     </body>
 </html>
