delete option added

--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
         <div class="container">
             <p>Here will be container for adding new notes!</p>
             <input type="text" id="input" placeholder="Write your task..."></input>
-            <button onclick="addElement()"> ADD </button>
-
+            <button onclick="addElement()" id="button"> ADD </button>
         </div>
 
         <ul id="mylist">
+            
 
         </ul>
     </body>
