--- a/main.html
+++ b/main.html
@@ -20,9 +20,7 @@
             <button onclick="addElement()" id="button"> ADD </button>
         </div>
 
-        <ul id="mylist">
-            
+        <ul id="mylist"></ul>
 
-        </ul>
     </body>
 </html>
