small visual update

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <h2></h2>
 
         <div class="container">
-            <p>Here will be container for adding new notes!</p>
+            <!-- <p>Here will be container for adding new notes!</p> -->
             <input type="text" id="input" placeholder="Write your task..."></input>
             <button onclick="addElement()" id="button"> ADD </button>
         </div>
