clock and pop up window added

--- a/main.html
+++ b/main.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <link href="main.css" rel="stylesheet">
         <script src="main.js"></script>
+        <script src="clock.js"></script>
     </head>
     <body>
         <div class="hellotxt">
             <h1>Hello World</h1>
             <p>here will be to do task web app!</p>
+            <button onclick="showTime()" id="timebutton">show current time</button>
+            <p id=clock></p>
         </div>
 
         <div class="clear"></div>
