--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="hellotxt">
-            <h1>Hello World</h1>
-            <p>here will be to do task web app!</p>
+            <h1>TODO LIST</h1>
+            <p id="instruction">ADD TASKS TO MANAGE YOUR DAY</p>
             <button onclick="showTime()" id="timebutton">show current time</button>
             <p id=clock></p>
         </div>
