--- a/main.html
+++ b/main.html
@@ -34,17 +34,17 @@
               <form action="/action_page.php" class="formContainer">
                 <h2>Please contact me</h2>
                 <div>
-                  <label for="name">Name</label></br>
+                  <label id="nametxt" for="name">Name</label></br>
                   <input id="name" name="name">
                 </div>
                 <div>
-                  <label for="email">Email</label><br>
+                  <label id="emailtxt" for="email">Email</label><br>
                   <input type="email" id="email" name="email">
                 </div>
                 <!-- <input type="text" id="email" placeholder="Your Email" name="email" required> -->
                 <div>
-                  <label for="message">Message</label><br>
-                  <textarea id="message" name="message"></textarea>
+                  <label id="messagetxt" for="message">Message</label><br>
+                  <textarea id="message" type="message"></textarea>
                 </div>
                 <!-- <input type="password" id="psw" placeholder="Your Password" name="psw" required> -->
                 <button type="submit" class="btn">Send</button>
